﻿
Version 0.2.1

- Added support for French road signs by Raymond Pelletie
- Standardise all logging


Version 0.2

- Fix NullreferenceException when selected prop pack is no longer subscribed to
- Fix option panel regeneration forcing attempted reapplication of changes
- Motorway gantries added to officially replacable signs
- Added support for 'Italy road signs - PACK' by Arnold J. Rimmer, Bsc. Ssc.
- German sign pack for Highway/National Road/Road-work-sites and other random signs by UFF