@@ -29,7 +29,7 @@ namespace RoadSignReplacer
                 }
                 catch (Exception e)
                 {
-                    Debug.LogException(e);
+                    Debugging.LogException(e);
                 }
             }
             return instance ?? (instance = new C());
@@ -53,7 +53,7 @@ namespace RoadSignReplacer
             }
             catch (Exception e)
             {
-                Debug.LogException(e);
+                Debugging.LogException(e);
             }
         }
 
@@ -68,7 +68,7 @@ namespace RoadSignReplacer
             }
             else
             {
-                Debug.LogError("ConfigurationPath attribute missing in " + typeof(C).Name);
+                Debugging.Message("ConfigurationPath attribute missing in " + typeof(C).Name);
                 return typeof(C).Name + ".xml";
             }
         }
